arrumando o config/endpoints